# trm

./: pyproject.toml
src/trm/: __init__.py  loss.py
src/trm/data/: __init__.py  sudoku.py  sudoku_dataset.py  transform.py
src/trm/engine/: train.py
src/trm/model/: __init__.py  mixer.py  trm.py
