[project]
name = "trm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brad Ezard", email = "brad@bradezard.me" }
]
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "numpy>=2.3.4",
    "torch>=2.9.0",
]

[project.scripts]
trm = "trm:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pyrefly>=0.37.0",
    "pytest>=8.4.2",
]
